# vokra

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  Package.swift  README-swift-package.md  README.ja.md  README.md  _typos.toml  deny.toml  rustfmt.toml
bindings/python/: LICENSE  NOTICE  README.md  hatch_build.py  pyproject.toml
bindings/python/examples/: quickstart_asr.py  quickstart_tts.py
bindings/python/scripts/: check-py-bindings.sh  gen-py-bindings.py
bindings/python/tests/: test_error.py  test_leak.py  test_negative.py  test_parity.py  test_session.py  test_smoke.py
crates/vokra-backend-coreml/: Cargo.toml
crates/vokra-backend-coreml/src/: backend.rs  lib.rs  probe.rs  sys.rs
crates/vokra-backend-cpu/: Cargo.toml
crates/vokra-backend-cpu/benches/: kernels.rs
crates/vokra-backend-cpu/src/: dispatch.rs  eval.rs  features.rs  lib.rs  pool.rs  selftest.rs
crates/vokra-backend-cpu/tests/: differential.rs  fused_logmel_isa_parity.rs  fused_logmel_isa_parity_neon.rs  gemm_packed_parity.rs  kquant_gemm_parity.rs  m5_14_backlog_bench.rs  rvv071_dispatch_parity.rs  rvv_dispatch_parity.rs  server_tier_parity.rs  single_binary_dispatch.rs
crates/vokra-backend-cuda/: Cargo.toml
crates/vokra-backend-cuda/src/: backend.rs  context.rs  eval.rs  fa_v3.rs  lib.rs  probe.rs  session_pool.rs  sys.rs
crates/vokra-backend-cuda/tests/: fa_v3_confinement.rs  fa_v3_dispatch.rs  fa_v3_harness.rs  fa_v3_nvrtc_feasibility.rs  m3_01_backend_coverage.rs  parity_cuda.rs  parity_kernels_cuda.rs  whisper_cuda_large_v3_rtf.rs
crates/vokra-backend-metal/: Cargo.toml
crates/vokra-backend-metal/src/: backend.rs  context.rs  eval.rs  lib.rs  probe.rs  sys.rs
crates/vokra-backend-metal/tests/: graph_metal.rs  parity_kernels_metal.rs  parity_metal.rs
crates/vokra-backend-qnn/: Cargo.toml
crates/vokra-backend-qnn/src/: backend.rs  lib.rs  probe.rs  sys.rs
crates/vokra-backend-vulkan/: Cargo.toml  build.rs
crates/vokra-backend-vulkan/kernels/: README.md
crates/vokra-backend-vulkan/src/: backend.rs  context.rs  eval.rs  kernels.rs  lib.rs  plan.rs  probe.rs  spirv.rs  sys.rs
crates/vokra-backend-vulkan/tests/: eval_op_dispatch.rs  gemm_pipeline_selection.rs  glsl_mirror.rs  graph_arm_coverage.rs  graph_executor_vulkan.rs  handcrafted_add_f32.rs  host_device_roundtrip.rs  kernel_dispatch.rs  no_silent_fallback.rs  parity_vulkan.rs  parity_whisper_chain_vulkan.rs  probe_honest.rs  smoke_dispatch.rs
crates/vokra-backend-webgpu/: Cargo.toml
crates/vokra-backend-webgpu/glue/: vokra_webgpu.js  vokra_worker.js
crates/vokra-backend-webgpu/kernels/: README.md
crates/vokra-backend-webgpu/src/: backend.rs  context.rs  eval.rs  lib.rs  plan.rs  probe.rs  sys.rs  wgsl.rs
crates/vokra-capi/: Cargo.toml  cbindgen.toml
crates/vokra-capi/src/: aec.rs  asr.rs  error.rs  ffi_guard.rs  handle.rs  lib.rs  s2s.rs  session.rs  stream.rs  tts.rs
crates/vokra-cli/: Cargo.toml
crates/vokra-cli/src/: bench.rs  convert.rs  engine.rs  main.rs  report.rs  run.rs  wav.rs
crates/vokra-cli/tests/: policy_e2e.rs  quant_fused_real_weights.rs
crates/vokra-convert/: Cargo.toml
crates/vokra-convert/src/: json.rs  lib.rs  main.rs  onnx.rs  quantize.rs  safetensors.rs
crates/vokra-convert/tests/: roundtrip.rs
crates/vokra-core/: Cargo.toml
crates/vokra-core/src/: backend.rs  complex.rs  engines.rs  error.rs  json.rs  lib.rs  m5_residual_ops.rs  pipeline.rs  prenorm.rs  rng.rs  safetensors.rs  session.rs  stream.rs  tasks.rs
crates/vokra-core/tests/: parity_wfst.rs  quant_parity.rs  streaming_interrupt.rs
crates/vokra-eval/: Cargo.toml
crates/vokra-eval/src/: cosyvoice2.rs  degradation.rs  dod.rs  gate.rs  lib.rs  main.rs  manifest.rs  nn.rs  wav.rs  zoo.rs
crates/vokra-eval/tests/: parity_utmos.rs  parity_utmos_stages.rs
crates/vokra-mmap/: Cargo.toml
crates/vokra-mmap/src/: lib.rs
crates/vokra-mmap/tests/: mmap_gguf.rs
crates/vokra-models/: Cargo.toml
crates/vokra-models/benches/: piper_rtf.rs
crates/vokra-models/examples/: asr_demo.rs  tts_demo.rs  vad_demo.rs
crates/vokra-models/src/: codec.rs  compute.rs  lib.rs  mapped_weights.rs  tls_scratch.rs
crates/vokra-models/tests/: codec_gguf_roundtrip.rs  cosyvoice2_llm_forward.rs  cosyvoice2_metal_parity.rs  csm_compliance.rs  csm_gpu_session.rs  csm_hot_path_alloc.rs  csm_quality_gate.rs  mimi_dual_write_guard.rs  mimi_metal_parity.rs  moshi_convert_e2e.rs  moshi_duplex.rs  moshi_metal_parity.rs  moshi_quality_gate.rs  parity_cosyvoice2.rs  parity_csm.rs  parity_kokoro.rs  parity_moshi.rs  parity_piper_plus_gpu.rs  parity_voxtral.rs  parity_whisper.rs  piper_css10_geometry.rs  real_codec_parity.rs  real_mimi_roundtrip.rs  voxtral_beam_search.rs  voxtral_gpu_session.rs  voxtral_real_gguf.rs  voxtral_tower_parity.rs  voxtral_transcription_prompt.rs
crates/vokra-ops/: Cargo.toml
crates/vokra-ops/THIRD_PARTY_LICENSES/: pocketfft-LICENSE.txt  speexdsp-LICENSE.txt
crates/vokra-ops/benches/: aec_bench.rs  fft_bench.rs  fused_logmel_bench.rs  istft_streaming_bench.rs
crates/vokra-ops/src/: aec.rs  agc.rs  attrs.rs  complex.rs  dac_rvq.rs  dct.rs  denoise.rs  dispatch.rs  encodec_rvq.rs  flow_sampler.rs  frontend.rs  fsq_codec.rs  fused_logmel.rs  hifigan.rs  hiftnet.rs  hpf.rs  istft.rs  istft_streaming.rs  kaldi_fbank.rs  length_conditioning.rs  lib.rs  loudness_norm.rs  mel.rs  mfcc.rs  mimi_rvq.rs  nsf.rs  preprocess.rs  prosody.rs  resample.rs  stft.rs  window.rs
crates/vokra-piper-plus/: Cargo.toml
crates/vokra-vad-micro/: Cargo.toml
integrations/vokra-cli-bench-server/: Cargo.toml  README.md
integrations/vokra-godot/: Cargo.toml  NOTICE  README.md  vokra.gdextension
integrations/vokra-misaki-g2p/: Cargo.toml  README.md  requirements.txt
integrations/vokra-piper-g2p/: Cargo.toml  README.md  validate.py
integrations/vokra-server/: Cargo.toml  README.md  deny.toml
integrations/vokra-server-bench/: Cargo.toml  README.md
tests/parity/: Cargo.toml  README.md  gen_parity_fixtures.py  parity-requirements.txt
tests/parity/src/: lib.rs
tests/wasm-harness/: Cargo.toml
(+988 files in other folders)
