# Vokra — speech-first inference runtime (ONNX / ONNX Runtime alternative for
# speech AI). Virtual workspace manifest.
#
# Crate layout and the rationale for it are recorded in
# docs/adr/0001-crate-layout.md (M0-02-T01). Members created in M0:
# vokra-core / vokra-ops / vokra-backend-cpu / vokra-models /
# vokra-piper-plus / vokra-capi, plus the test-only parity harness
# `vokra-parity` under tests/parity (NFR-QL-01).

[workspace]
resolver = "3"
members = ["crates/*", "tests/parity"]
# `integrations/` holds opt-in bridges that link NON-`vokra-*` crates (e.g. the
# 8-language `piper-plus-g2p` for real G2P). They are their OWN isolated
# workspaces (each with its own Cargo.lock) so the zero-dependency invariant of
# this root workspace (NFR-DS-02, enforced on THIS Cargo.lock) is never touched.
# Excluded here as belt-and-suspenders; the glob members above already skip them.
exclude = ["integrations"]

[workspace.package]
version = "0.1.0-alpha.0"
# Proposal per M0-02-T01: edition 2024; to be pinned together with the CI
# toolchain during the spike (verified locally with rustc 1.95.0).
edition = "2024"
# Minimum toolchain that supports edition 2024. Final MSRV is pinned during
# the spike together with the CI toolchain.
rust-version = "1.85"
# NFR-LC-01: the whole runtime is Apache-2.0.
license = "Apache-2.0"
# No crates.io publishing has been decided yet (private repo, v0.1 spike);
# guard against accidental publishes.
publish = false

[workspace.dependencies]
vokra-core = { path = "crates/vokra-core" }
vokra-ops = { path = "crates/vokra-ops" }
vokra-backend-cpu = { path = "crates/vokra-backend-cpu" }
vokra-backend-metal = { path = "crates/vokra-backend-metal" }
vokra-backend-cuda = { path = "crates/vokra-backend-cuda" }
vokra-backend-vulkan = { path = "crates/vokra-backend-vulkan" }
vokra-models = { path = "crates/vokra-models" }
vokra-piper-plus = { path = "crates/vokra-piper-plus" }
vokra-capi = { path = "crates/vokra-capi" }
vokra-mmap = { path = "crates/vokra-mmap" }

# Unsafe boundary policy (M0-02-T03; NFR-RL-07, SRS §5-(1)):
# the workspace is safe-by-default (`unsafe_code = "deny"`). `unsafe` +
# SIMD intrinsics / C ABI code are permitted ONLY in vokra-ops,
# vokra-backend-cpu, vokra-backend-metal, vokra-backend-cuda,
# vokra-backend-vulkan, vokra-capi and vokra-mmap. The
# vokra-mmap opt-out backs the self-declared POSIX `mmap` / Win32 file-mapping
# FFI for true zero-copy GGUF loading; vokra-backend-metal backs the
# self-declared Objective-C runtime + Metal / Foundation framework FFI (NO
# `metal` / `objc2` binding crate — see its crate docs); vokra-backend-cuda backs
# the self-declared CUDA Driver API + NVRTC FFI loaded at RUNTIME via dlopen /
# LoadLibrary (NO `cudarc` / `cust` / `rustacuda` binding crate, and no CUDA
# library is bundled or linked — NVIDIA EULA install model — see its crate docs);
# vokra-backend-vulkan backs the self-declared Vulkan API FFI loaded at RUNTIME
# via dlopen / LoadLibrary (NO `ash` / `vulkano` / `erupt` binding crate — see
# its crate docs) with pre-compiled SPIR-V shaders and a subgroup /
# cooperative-matrix + subgroup-only fallback shader pair (M3-02).
# All add no external crate. These crates opt out locally with
# `#![allow(unsafe_code)]` at their
# crate root. Public API boundaries must
# remain safe in every crate. Every `unsafe` block must carry a
# `// SAFETY:` comment — enforced by `clippy::undocumented_unsafe_blocks`
# below.
[workspace.lints.rust]
unsafe_code = "deny"
# All public items must be documented (M0-02-T15); promoted to an error by
# the `cargo clippy -- -D warnings` CI gate.
missing_docs = "warn"

[workspace.lints.clippy]
# Operational rule (M0-02-T03): `unsafe` blocks require a `// SAFETY:` comment.
undocumented_unsafe_blocks = "deny"

# ---------------------------------------------------------------------------
# Build profiles (M1-11a: binary-size levers + <10MB size gate).
#
# Profiles are honoured only in the workspace-root manifest, so they live here.
# Rationale and the size budget are documented in docs/design/size-budget.md and
# enforced by scripts/check-binary-size.sh (gates the shipped libvokra cdylib).
# ---------------------------------------------------------------------------

# The profile that builds the shipped runtime: the libvokra cdylib/staticlib
# (crates/vokra-capi) and the release bins. It is tuned for size WITHOUT giving
# up real-time performance.
[profile.release]
# RTF (real-time factor) is the first-priority NFR (NFR-PF-*), so the runtime hot
# path keeps opt-level 3. The size reduction here comes from LTO + strip + a single
# codegen unit — NOT from lowering opt-level. Do NOT switch this to "z"/"s": that
# would slow the inference hot path that ships from this profile.
opt-level = 3
# Fat cross-crate LTO inlines across the vokra-* graph and removes duplicated /
# monomorphised code — smaller *and* faster. Safe for the cdylib/staticlib.
lto = "fat"
# A single codegen unit maximises LTO/inlining and dead-code removal, at a modest
# compile-time cost (acceptable: release builds are not the inner dev loop).
codegen-units = 1
# Strip symbols + debuginfo from the shipped artifacts. For a debug-symbol-heavy
# library this is the single biggest size lever, and it is safe.
strip = true
# panic is LEFT AT THE DEFAULT ("unwind") ON PURPOSE — do NOT set panic="abort"
# on this profile. crates/vokra-capi/src/ffi_guard.rs implements the FFI panic
# firewall with std::panic::catch_unwind (turns a Rust panic into
# VOKRA_ERROR_PANIC instead of unwinding into C). Under panic="abort" that
# catch_unwind becomes a no-op and a panic would abort the entire host process
# (Unity/Godot/iOS/Android app). Because `panic` is a whole-compilation setting
# (it is NOT overridable per-package like opt-level/codegen-units), the libvokra
# cdylib/staticlib MUST build with unwinding. Non-FFI standalone bins may opt into
# abort via [profile.release-min] below.

# Size-minimised profile for STANDALONE binaries that never cross the C ABI
# (e.g. the offline vokra-convert tool, a future vokra CLI). Such bins have no
# FFI panic firewall to preserve, so they may drop unwind tables via
# panic="abort" for a small extra size win. It inherits every lever from
# [profile.release] (opt-level 3 is kept so an inference-capable CLI keeps its
# RTF).
#
#   USE IT TARGETED AT A BIN PACKAGE, e.g.:  cargo build --profile release-min -p vokra-convert
#
# NEVER invoke it workspace-wide or for `-p vokra-capi`: because `panic` is
# compilation-wide, that would rebuild libvokra with abort and silently break the
# FFI panic firewall described above. The size gate and every script/CI job build
# the runtime with the `release` profile, never `release-min`.
[profile.release-min]
inherits = "release"
# Drops landing pads / unwind tables. Sound ONLY for non-FFI standalone bins whose
# call graph contains no catch_unwind boundary. (A pure size-first tool that never
# runs the inference hot path may additionally set `opt-level = "s"` here.)
panic = "abort"
