# Vokra — speech-first inference runtime (ONNX / ONNX Runtime alternative for
# speech AI). Virtual workspace manifest.
#
# Crate layout and the rationale for it are recorded in
# docs/adr/0001-crate-layout.md (M0-02-T01). Members created in M0:
# vokra-core / vokra-ops / vokra-backend-cpu / vokra-models /
# vokra-piper-plus / vokra-capi, plus the test-only parity harness
# `vokra-parity` under tests/parity (NFR-QL-01).

[workspace]
resolver = "3"
members = ["crates/*", "tests/parity", "tests/wasm-harness"]
# `integrations/` holds opt-in bridges that link NON-`vokra-*` crates (e.g. the
# 8-language `piper-plus-g2p` for real G2P). They are their OWN isolated
# workspaces (each with its own Cargo.lock) so the zero-dependency invariant of
# this root workspace (NFR-DS-02, enforced on THIS Cargo.lock) is never touched.
# Excluded here as belt-and-suspenders; the glob members above already skip them.
exclude = ["integrations"]

[workspace.package]
version = "0.1.0-alpha.0"
# Proposal per M0-02-T01: edition 2024; to be pinned together with the CI
# toolchain during the spike (verified locally with rustc 1.95.0).
edition = "2024"
# Minimum toolchain that supports edition 2024. Final MSRV is pinned during
# the spike together with the CI toolchain.
rust-version = "1.85"
# NFR-LC-01: the whole runtime is Apache-2.0.
license = "Apache-2.0"
# crates.io listing metadata (X-07-T09, NFR-DS-03 "Cargo crate"). Inherited by
# the 15-crate publish set via `<field>.workspace = true` in each crate header;
# the excluded crates (vokra-eval + the tests/parity / tests/wasm-harness
# harnesses) do NOT inherit these and stay `publish = false`. `documentation`
# is intentionally left UNSET so crates.io auto-links each crate to its own
# docs.rs/<crate> page (X-09b) — a single workspace-wide URL would be wrong for
# a multi-crate workspace; see ADR docs/adr/X-07-release-train.md §crates.io.
repository = "https://github.com/ayutaz/vokra"
homepage = "https://github.com/ayutaz/vokra"
readme = "README.md"
keywords = ["audio", "speech", "inference", "tts", "asr"]
categories = ["multimedia::audio", "science", "api-bindings"]
# Default is NOT publishable: the workspace-level `publish = false` guards
# against accidental publishes of any NEW crate (crates.io is an immutable
# index — a mistaken publish is unrecoverable). Only the 15 crates in the
# publish closure override this with an explicit `publish = true`; the closure
# (topological set) is derived mechanically by
# tools/release/crates_publish_order.py and fixed in the ADR.
publish = false

[workspace.dependencies]
# Intra-workspace path deps. The `version` alongside `path` (X-07-T10) is a
# no-op for local builds (path wins) but is REQUIRED for `cargo publish`: a
# published crate cannot reference a path-only dependency — the registry needs a
# version to resolve. All crates share the workspace version (Cargo.toml:21), so
# the requirement tracks it. Adding these does NOT change Cargo.lock (path
# resolution is unchanged — verified by the zero-dep tripwire).
vokra-core = { path = "crates/vokra-core", version = "0.1.0-alpha.0" }
vokra-ops = { path = "crates/vokra-ops", version = "0.1.0-alpha.0" }
vokra-backend-cpu = { path = "crates/vokra-backend-cpu", version = "0.1.0-alpha.0" }
vokra-backend-metal = { path = "crates/vokra-backend-metal", version = "0.1.0-alpha.0" }
vokra-backend-cuda = { path = "crates/vokra-backend-cuda", version = "0.1.0-alpha.0" }
vokra-backend-vulkan = { path = "crates/vokra-backend-vulkan", version = "0.1.0-alpha.0" }
vokra-backend-webgpu = { path = "crates/vokra-backend-webgpu", version = "0.1.0-alpha.0" }
vokra-backend-coreml = { path = "crates/vokra-backend-coreml", version = "0.1.0-alpha.0" }
vokra-backend-qnn = { path = "crates/vokra-backend-qnn", version = "0.1.0-alpha.0" }
vokra-models = { path = "crates/vokra-models", version = "0.1.0-alpha.0" }
vokra-piper-plus = { path = "crates/vokra-piper-plus", version = "0.1.0-alpha.0" }
vokra-capi = { path = "crates/vokra-capi", version = "0.1.0-alpha.0" }
vokra-mmap = { path = "crates/vokra-mmap", version = "0.1.0-alpha.0" }
vokra-convert = { path = "crates/vokra-convert", version = "0.1.0-alpha.0" }
# M5-03 (案1): the no_std(+alloc) Silero VAD forward core. `vokra-models`
# depends on it (default features) and re-exports it; the Cortex-M55 Tier-3
# build uses it with `--no-default-features`. First-party `vokra-*` crate with
# only a `vokra-core` dep, so the root Cargo.lock stays vokra-* only (NFR-DS-02).
vokra-vad-micro = { path = "crates/vokra-vad-micro", version = "0.1.0-alpha.0" }

# Unsafe boundary policy (M0-02-T03; NFR-RL-07, SRS §5-(1)):
# the workspace is safe-by-default (`unsafe_code = "deny"`). `unsafe` +
# SIMD intrinsics / C ABI code are permitted ONLY in vokra-ops,
# vokra-backend-cpu, vokra-backend-metal, vokra-backend-cuda,
# vokra-backend-vulkan, vokra-backend-webgpu, vokra-backend-coreml,
# vokra-backend-qnn, vokra-capi, vokra-mmap and
# vokra-wasm-harness. The
# vokra-mmap opt-out backs the self-declared POSIX `mmap` / Win32 file-mapping
# FFI for true zero-copy GGUF loading; vokra-backend-metal backs the
# self-declared Objective-C runtime + Metal / Foundation framework FFI (NO
# `metal` / `objc2` binding crate — see its crate docs); vokra-backend-cuda backs
# the self-declared CUDA Driver API + NVRTC FFI loaded at RUNTIME via dlopen /
# LoadLibrary (NO `cudarc` / `cust` / `rustacuda` binding crate, and no CUDA
# library is bundled or linked — NVIDIA EULA install model — see its crate docs);
# vokra-backend-vulkan backs the self-declared Vulkan API FFI loaded at RUNTIME
# via dlopen / LoadLibrary (NO `ash` / `vulkano` / `erupt` binding crate — see
# its crate docs) with pre-compiled SPIR-V shaders and a subgroup /
# cooperative-matrix + subgroup-only fallback shader pair (M3-02);
# vokra-backend-webgpu backs the self-declared wasm extern-import shim over the
# browser WebGPU API (NO `wgpu` / `wasm-bindgen` binding crate — import-object
# resolution at instantiate time is the WASM dlopen equivalent, M4-01);
# vokra-wasm-harness backs the (ptr, len) wasm ABI boundary of the Web entry
# crate (M4-01 — test entries + session API over hand-written JS glue);
# vokra-backend-coreml backs the self-declared Objective-C runtime + CoreML /
# Foundation framework FFI (NO objc2 / objc2-core-ml binding crate — M5-01);
# vokra-backend-qnn backs the self-declared QNN (Qualcomm AI Engine Direct) FFI
# loaded at RUNTIME via dlopen / LoadLibrary (NO qnn-sys / hexagon binding crate,
# and no SDK is bundled or linked — Qualcomm EULA install model — see its crate
# docs; QNN is the Hexagon NPU delegate, NOT NNAPI, M5-02).
# All add no external crate. These crates opt out locally with
# `#![allow(unsafe_code)]` at their
# crate root. Public API boundaries must
# remain safe in every crate. Every `unsafe` block must carry a
# `// SAFETY:` comment — enforced by `clippy::undocumented_unsafe_blocks`
# below.
[workspace.lints.rust]
unsafe_code = "deny"
# All public items must be documented (M0-02-T15); promoted to an error by
# the `cargo clippy -- -D warnings` CI gate.
missing_docs = "warn"

[workspace.lints.clippy]
# Operational rule (M0-02-T03): `unsafe` blocks require a `// SAFETY:` comment.
undocumented_unsafe_blocks = "deny"

# ---------------------------------------------------------------------------
# Build profiles (M1-11a: binary-size levers + <10MB size gate).
#
# Profiles are honoured only in the workspace-root manifest, so they live here.
# Rationale and the size budget are documented in docs/design/size-budget.md and
# enforced by scripts/check-binary-size.sh (gates the shipped libvokra cdylib).
# ---------------------------------------------------------------------------

# The profile that builds the shipped runtime: the libvokra cdylib/staticlib
# (crates/vokra-capi) and the release bins. It is tuned for size WITHOUT giving
# up real-time performance.
[profile.release]
# RTF (real-time factor) is the first-priority NFR (NFR-PF-*), so the runtime hot
# path keeps opt-level 3. The size reduction here comes from LTO + strip + a single
# codegen unit — NOT from lowering opt-level. Do NOT switch this to "z"/"s": that
# would slow the inference hot path that ships from this profile.
opt-level = 3
# Fat cross-crate LTO inlines across the vokra-* graph and removes duplicated /
# monomorphised code — smaller *and* faster. Safe for the cdylib/staticlib.
lto = "fat"
# A single codegen unit maximises LTO/inlining and dead-code removal, at a modest
# compile-time cost (acceptable: release builds are not the inner dev loop).
codegen-units = 1
# Strip symbols + debuginfo from the shipped artifacts. For a debug-symbol-heavy
# library this is the single biggest size lever, and it is safe.
strip = true
# panic is LEFT AT THE DEFAULT ("unwind") ON PURPOSE — do NOT set panic="abort"
# on this profile. crates/vokra-capi/src/ffi_guard.rs implements the FFI panic
# firewall with std::panic::catch_unwind (turns a Rust panic into
# VOKRA_ERROR_PANIC instead of unwinding into C). Under panic="abort" that
# catch_unwind becomes a no-op and a panic would abort the entire host process
# (Unity/Godot/iOS/Android app). Because `panic` is a whole-compilation setting
# (it is NOT overridable per-package like opt-level/codegen-units), the libvokra
# cdylib/staticlib MUST build with unwinding. Non-FFI standalone bins may opt into
# abort via [profile.release-min] below.

# Size-minimised profile for STANDALONE binaries that never cross the C ABI
# (e.g. the offline vokra-convert tool, a future vokra CLI). Such bins have no
# FFI panic firewall to preserve, so they may drop unwind tables via
# panic="abort" for a small extra size win. It inherits every lever from
# [profile.release] (opt-level 3 is kept so an inference-capable CLI keeps its
# RTF).
#
#   USE IT TARGETED AT A BIN PACKAGE, e.g.:  cargo build --profile release-min -p vokra-convert
#
# NEVER invoke it workspace-wide or for `-p vokra-capi`: because `panic` is
# compilation-wide, that would rebuild libvokra with abort and silently break the
# FFI panic firewall described above. The size gate and every script/CI job build
# the runtime with the `release` profile, never `release-min`.
[profile.release-min]
inherits = "release"
# Drops landing pads / unwind tables. Sound ONLY for non-FFI standalone bins whose
# call graph contains no catch_unwind boundary. (A pure size-first tool that never
# runs the inference hot path may additionally set `opt-level = "s"` here.)
panic = "abort"
