[package]
name = "vokra-backend-metal"
description = "Vokra Metal backend (macOS/iOS): raw Objective-C / Metal FFI — NO binding crate — with an FP32 GEMM compute kernel and a device/GPU-family probe. Foundation slice of M2-01; the workspace stays dependency-free (NFR-DS-02)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = true
# crates.io listing metadata inherited from [workspace.package] (X-07-T09).
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# docs.rs (X-09b-T17): the Metal FFI is cfg(target_os = "macos"/"ios"), so
# docs.rs's default Linux target would render an almost-empty crate. Build the
# real API on an Apple target instead. Inert for local builds; adds no deps.
[package.metadata.docs.rs]
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]

# Zero external dependencies (NFR-DS-02): the only runtime dependency is the
# first-party `vokra-core` (for the `Backend` trait / `OpKind` / `VokraError`).
# The Metal, Foundation and Objective-C runtime symbols are declared inline in
# `unsafe extern` blocks and linked with `#[link(..., kind = "framework")]` —
# NO `metal` / `objc2` / `objc` / `core-foundation` binding crate is used, so
# Cargo.lock keeps only `vokra-*` crates (verified by scripts/check-zero-deps.sh).
[dependencies]
vokra-core.workspace = true

# Test-only differential oracle: the CPU backend's `gemm_f32` kernel is the
# reference the Metal GEMM is checked against (M2-01-T17/T18). It is a
# first-party `vokra-*` crate, so it does not perturb the zero-dependency
# invariant of the root Cargo.lock.
[dev-dependencies]
vokra-backend-cpu.workspace = true

[lints]
workspace = true
